update: audit module

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <nz-layout style="height: 100%">
   <nz-header class="nav">
-    <app-nav menu="admin"></app-nav>
+    <app-nav type="admin"></app-nav>
   </nz-header>
   <nz-layout>
     <nz-sider nzWidth="240px" nzTheme="light">
@@ -48,15 +48,6 @@
             <li nz-menu-item nzMatchRouter routerLink="settings/extend">
               <span nz-icon nzType="tool" nzTheme="outline"></span>
               <span>扩展服务</span>
-            </li>
-            <li nz-menu-divider></li>
-            <li nz-menu-item nzMatchRouter routerLink="settings/logined">
-              <span nz-icon nzType="history"></span>
-              <span i18n>登录历史</span>
-            </li>
-            <li nz-menu-item nzMatchRouter routerLink="settings/audit">
-              <span nz-icon nzType="audit"></span>
-              <span i18n>审计日志</span>
             </li>
           </ul>
         </li>
