--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -1,6 +1,6 @@
 <nz-layout style="height: 100%">
   <nz-header class="nav">
-    <app-nav menu="experiment"></app-nav>
+    <app-nav type="experiment"></app-nav>
   </nz-header>
   <nz-layout>
     <nz-sider nzWidth="240px" nzTheme="light">
