--- a/src/common/components/nav/nav.component.html
+++ b/src/common/components/nav/nav.component.html
@@ -2,11 +2,15 @@
   <button nzSize="large" nz-button nzType="text" routerLink="/admin">
     <span nz-icon nzType="control" nzTheme="outline"></span> 管理后台
   </button>
+  <button nzSize="large" nz-button nzType="text" routerLink="/filebrowser">
+    <span nz-icon nzType="inbox" nzTheme="outline"></span> 资源中心
+  </button>
   <button nzSize="large" nz-button nzType="text" routerLink="/audit">
     <span nz-icon nzType="audit" nzTheme="outline"></span> 审计日志
   </button>
+  <br />
   <button nzSize="large" nz-button nzType="text" routerLink="/experiment">
-    <span nz-icon nzType="experiment" nzTheme="outline"></span> 实验中心
+    <span nz-icon nzType="experiment" nzTheme="outline"></span> 实验
   </button>
 </ng-template>
 
