--- a/src/app/filebrowser/filebrowser.component.html
+++ b/src/app/filebrowser/filebrowser.component.html
@@ -2,13 +2,13 @@
   <nz-header class="nav">
     <app-nav>
       <ul nz-menu nzMode="horizontal" style="line-height: 59px">
-        <li nz-menu-item nzMatchRouter routerLink="logined">
-          <span nz-icon nzType="login" nzTheme="outline"></span>
-          登录
+        <li nz-menu-item nzMatchRouter routerLink="pictures">
+          <span nz-icon nzType="picture" nzTheme="outline"></span>
+          图片
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="operates">
-          <span nz-icon nzType="history" nzTheme="outline"></span>
-          操作
+        <li nz-menu-item nzMatchRouter routerLink="videos">
+          <span nz-icon nzType="video-camera" nzTheme="outline"></span>
+          视频
         </li>
       </ul>
     </app-nav>
