--- a/src/app/filebrowser/pictures/pictures.component.html
+++ b/src/app/filebrowser/pictures/pictures.component.html
@@ -1,26 +1,10 @@
-<ng-template #titleRef>
-  <nz-space>
-    <wpx-keyword
-      *nzSpaceItem
-      [wpxModel]="model"
-      [wpxKeys]="['name', 'key']"
-      (wpxSubmit)="getData(true)"
-      wpxPlaceholder="名称、路径"
-    ></wpx-keyword>
-  </nz-space>
-</ng-template>
-
-<ng-template #extraRef>
-  <wpx-upload-transport
-    [wpxExt]="'image'"
-    [wpxAccept]="['image/jpeg', 'image/png', 'image/bmp', 'image/gif', 'image/webp', 'image/avif']"
-    (wpxChange)="upload($event)"
-  ></wpx-upload-transport>
-</ng-template>
-
 <nz-layout style="height: 100%">
   <nz-sider nzWidth="240px" nzTheme="light"> </nz-sider>
   <nz-content style="height: 100%">
-    <wpx-filebrowser [wpxModel]="model" [wpxTitle]="titleRef" [wpxExtra]="extraRef"></wpx-filebrowser>
+    <wpx-filebrowser
+      [wpxApi]="pictures"
+      [wpxType]="'picture'"
+      [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
+    ></wpx-filebrowser>
   </nz-content>
 </nz-layout>
