--- a/src/app/filebrowser/videos/videos.component.html
+++ b/src/app/filebrowser/videos/videos.component.html
@@ -1,14 +1,10 @@
-<!--<ng-template #titleRef>-->
-<!--  <nz-space>-->
-<!--    <wpx-keyword-->
-<!--      *nzSpaceItem-->
-<!--      [wpxModel]="model"-->
-<!--      [wpxKeys]="['name', 'key']"-->
-<!--      (wpxSubmit)="getData()"-->
-<!--      wpxPlaceholder="名称、路径"-->
-<!--    ></wpx-keyword>-->
-<!--  </nz-space>-->
-<!--</ng-template>-->
-<!--<ng-template #extraRef></ng-template>-->
-
-<!--<wpx-filebrowser [wpxTitle]="titleRef" [wpxExtra]="extraRef"></wpx-filebrowser>-->
+<nz-layout style="height: 100%">
+  <nz-sider nzWidth="240px" nzTheme="light"> </nz-sider>
+  <nz-content style="height: 100%">
+    <wpx-filebrowser
+      [wpxApi]="videos"
+      [wpxType]="'video'"
+      [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
+    ></wpx-filebrowser>
+  </nz-content>
+</nz-layout>
