update: filebrowser-input

--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -13,6 +13,10 @@
           <span nz-icon nzType="experiment" nzTheme="outline"></span>
           <span>表格</span>
         </li>
+        <li nz-menu-item nzMatchRouter routerLink="upload">
+          <span nz-icon nzType="experiment" nzTheme="outline"></span>
+          <span>上传</span>
+        </li>
       </ul>
     </nz-sider>
     <nz-layout style="overflow: hidden auto">
