--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -17,6 +17,10 @@
           <span nz-icon nzType="experiment" nzTheme="outline"></span>
           <span>上传</span>
         </li>
+        <li nz-menu-item nzMatchRouter routerLink="article">
+          <span nz-icon nzType="experiment" nzTheme="outline"></span>
+          <span>文章</span>
+        </li>
       </ul>
     </nz-sider>
     <nz-layout style="overflow: hidden auto">
