--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,7 @@
 @import '~node_modules/ng-zorro-antd/ng-zorro-antd.less';
 @import '~node_modules/ng-zorro-antd/resizable/style/entry.less';
 @import '~node_modules/ng-zorro-antd/code-editor/style/entry.less';
+@import 'https://cdn.kainonly.com/npm/cropperjs@1.5.13/dist/cropper.min.css';
 
 @nav-height: 60px;
 
