--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -13,9 +13,9 @@
           <span nz-icon nzType="project" nzTheme="outline"></span>
           <span>项目</span>
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="monitor">
+        <li nz-menu-item nzMatchRouter routerLink="observability">
           <span nz-icon nzType="line-chart" nzTheme="outline"></span>
-          <span>监控</span>
+          <span>观测</span>
         </li>
         <li nz-menu-divider></li>
         <li nz-menu-item nzMatchRouter routerLink="users">
