--- a/src/app/admin/observability/observability.component.html
+++ b/src/app/admin/observability/observability.component.html
@@ -1,27 +1,148 @@
-<nz-segmented [nzOptions]="options" [ngModel]="index" (ngModelChange)="link($event)"></nz-segmented>
+<nz-row nzJustify="space-between">
+  <nz-col>
+    <nz-space nzAlign="center">
+      <nz-segmented
+        *nzSpaceItem
+        style="font-weight: bold"
+        [nzOptions]="dashboards"
+        [ngModel]="index"
+        (ngModelChange)="open($event)"
+      ></nz-segmented>
+      <button *nzSpaceItem nz-button nzType="text"> <span nz-icon nzType="sync"></span> </button>
+    </nz-space>
+  </nz-col>
+  <nz-col></nz-col>
+  <nz-col>
+    <nz-space nzAlign="center">
+      <nz-select
+        *nzSpaceItem
+        style="width: 220px"
+        nzBorderless
+        [ngModel]="observability.interval | async"
+        (ngModelChange)="observability.setInterval($event)"
+      >
+        <nz-option [nzValue]="10" nzLabel="每 10s 刷新" i18n-nzLabel></nz-option>
+        <nz-option [nzValue]="30" nzLabel="每 30s 刷新" i18n-nzLabel></nz-option>
+        <nz-option [nzValue]="60" nzLabel="每 60s 刷新" i18n-nzLabel></nz-option>
+      </nz-select>
+      <nz-range-picker
+        *nzSpaceItem
+        nzBorderless
+        [nzShowTime]="{ nzFormat: 'HH:mm' }"
+        nzFormat="yyyy-MM-dd HH:mm"
+      ></nz-range-picker>
+    </nz-space>
+  </nz-col>
+</nz-row>
 
 <div style="padding: 8px 0" [ngSwitch]="index">
   <nz-row *ngSwitchCase="1" [nzGutter]="[8, 8]">
     <nz-col [nzSpan]="8">
-      <v-mongo-available-connections></v-mongo-available-connections>
+      <app-observability-area
+        title="可用连接"
+        name="mongo_available_connections"
+        [options]="options.mongo_available_connections"
+      ></app-observability-area>
     </nz-col>
     <nz-col [nzSpan]="8">
-      <v-mongo-open-connections></v-mongo-open-connections>
+      <app-observability-area
+        title="打开连接"
+        name="mongo_open_connections"
+        [options]="options.mongo_open_connections"
+      ></app-observability-area>
     </nz-col>
     <nz-col [nzSpan]="8">
-      <v-mongo-commands-per-second></v-mongo-commands-per-second>
+      <app-observability-area
+        title="每秒命令"
+        name="mongo_commands_per_second"
+        [options]="options.mongo_commands_per_second"
+      ></app-observability-area>
     </nz-col>
     <nz-col [nzSpan]="12">
-      <v-mongo-query-operations></v-mongo-query-operations>
+      <app-observability-area
+        title="查询操作"
+        name="mongo_query_operations"
+        [options]="options.mongo_query_operations"
+        [fn]="mongo_query_operations"
+      ></app-observability-area>
     </nz-col>
     <nz-col [nzSpan]="12">
-      <v-mongo-document-operations></v-mongo-document-operations>
+      <app-observability-area
+        title="文档操作"
+        name="mongo_document_operations"
+        [options]="options.mongo_document_operations"
+        [fn]="mongo_document_operations"
+      ></app-observability-area>
     </nz-col>
     <nz-col [nzSpan]="12">
-      <v-mongo-flushes></v-mongo-flushes>
+      <app-observability-area
+        title="数据刷新"
+        name="mongo_flushes"
+        [options]="options.mongo_flushes"
+      ></app-observability-area>
     </nz-col>
     <nz-col [nzSpan]="12">
-      <v-mongo-network-io></v-mongo-network-io>
+      <app-observability-area
+        title="网络 IO"
+        name="mongo_network_io"
+        [options]="options.mongo_network_io"
+        [fn]="mongo_network_io"
+      ></app-observability-area>
+    </nz-col>
+  </nz-row>
+  <nz-row *ngSwitchCase="2" [nzGutter]="[8, 8]">
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="每秒处理命令数"
+        name="redis_ops_per_sec"
+        [options]="options.redis_ops_per_sec"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="连接数速率"
+        name="redis_collections_rate"
+        [options]="options.redis_collections_rate"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="Keyspace hitrate"
+        name="redis_hit_rate"
+        [options]="options.redis_hit_rate"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="12">
+      <app-observability-area
+        title="CPU"
+        name="redis_cpu"
+        [options]="options.redis_cpu"
+        [fn]="redis_cpu"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="12">
+      <app-observability-area
+        title="驱逐 / 过期"
+        name="redis_evi_exp_keys"
+        [options]="options.redis_evi_exp_keys"
+        [fn]="redis_evi_exp_keys"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="12">
+      <app-observability-area
+        title="内存"
+        name="redis_mem"
+        [options]="options.redis_mem"
+        [fn]="redis_mem"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="12">
+      <app-observability-area
+        title="网络 IO"
+        name="redis_network_io"
+        [options]="options.redis_network_io"
+        [fn]="redis_network_io"
+      ></app-observability-area>
     </nz-col>
   </nz-row>
 </div>
