--- a/src/app/admin/observability/observability.component.html
+++ b/src/app/admin/observability/observability.component.html
@@ -8,26 +8,26 @@
         [ngModel]="index"
         (ngModelChange)="open($event)"
       ></nz-segmented>
-      <button *nzSpaceItem nz-button nzType="text"> <span nz-icon nzType="sync"></span> </button>
+      <nz-select
+        *nzSpaceItem
+        nzBorderless
+        [ngModel]="observability.interval | async"
+        (ngModelChange)="observability.setInterval($event)"
+      >
+        <nz-option [nzValue]="10" nzLabel="每 10s 自动刷新" i18n-nzLabel></nz-option>
+        <nz-option [nzValue]="30" nzLabel="每 30s 自动刷新" i18n-nzLabel></nz-option>
+        <nz-option [nzValue]="60" nzLabel="每 60s 自动刷新" i18n-nzLabel></nz-option>
+      </nz-select>
     </nz-space>
   </nz-col>
   <nz-col></nz-col>
   <nz-col>
     <nz-space nzAlign="center">
-      <nz-select
-        *nzSpaceItem
-        style="width: 220px"
-        nzBorderless
-        [ngModel]="observability.interval | async"
-        (ngModelChange)="observability.setInterval($event)"
-      >
-        <nz-option [nzValue]="10" nzLabel="每 10s 刷新" i18n-nzLabel></nz-option>
-        <nz-option [nzValue]="30" nzLabel="每 30s 刷新" i18n-nzLabel></nz-option>
-        <nz-option [nzValue]="60" nzLabel="每 60s 刷新" i18n-nzLabel></nz-option>
-      </nz-select>
+      <button *nzSpaceItem nz-button nzType="text" disabled> <span nz-icon nzType="sync"></span> </button>
       <nz-range-picker
         *nzSpaceItem
         nzBorderless
+        nzDisabled
         [nzShowTime]="{ nzFormat: 'HH:mm' }"
         nzFormat="yyyy-MM-dd HH:mm"
       ></nz-range-picker>
@@ -36,6 +36,28 @@
 </nz-row>
 
 <div style="padding: 8px 0" [ngSwitch]="index">
+  <nz-row *ngSwitchCase="0" [nzGutter]="[8, 8]">
+    <nz-col [nzSpan]="12">
+      <app-observability-area
+        title="每秒查询率"
+        name="qps_rate"
+        height="300"
+        [options]="options.qps_rate"
+        [fn]="qps_rate"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8"> </nz-col> <nz-col [nzSpan]="8"> </nz-col>
+
+    <!--    <nz-col [nzSpan]="24">-->
+    <!--      <app-observability-line-->
+    <!--        title="P99"-->
+    <!--        name="p99"-->
+    <!--        height="300px"-->
+    <!--        [options]="options.p99"-->
+    <!--        [fn]="p99"-->
+    <!--      ></app-observability-line>-->
+    <!--    </nz-col>-->
+  </nz-row>
   <nz-row *ngSwitchCase="1" [nzGutter]="[8, 8]">
     <nz-col [nzSpan]="8">
       <app-observability-area
@@ -114,7 +136,7 @@
     </nz-col>
     <nz-col [nzSpan]="12">
       <app-observability-area
-        title="CPU"
+        title="CPU 使用率"
         name="redis_cpu"
         [options]="options.redis_cpu"
         [fn]="redis_cpu"
@@ -130,7 +152,7 @@
     </nz-col>
     <nz-col [nzSpan]="12">
       <app-observability-area
-        title="内存"
+        title="内存用量"
         name="redis_mem"
         [options]="options.redis_mem"
         [fn]="redis_mem"
@@ -172,7 +194,7 @@
     </nz-col>
     <nz-col [nzSpan]="12">
       <app-observability-area
-        title="消息 IO"
+        title="消息数 IO"
         name="nats_msg_io"
         [options]="options.nats_msg_io"
         [fn]="nats_msg_io"
@@ -187,6 +209,79 @@
         name="nats_bytes_io"
         [options]="options.nats_bytes_io"
         [fn]="nats_bytes_io"
+      ></app-observability-area>
+    </nz-col>
+  </nz-row>
+  <nz-row *ngSwitchCase="4" [nzGutter]="[8, 8]">
+    <nz-col [nzSpan]="8">
+      <app-observability-area title="Go 协程" name="goroutines" [options]="options.goroutines"></app-observability-area>
+    </nz-col>
+
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="空闲（未使用）的堆内存"
+        name="mem_heap_idle"
+        [options]="options.mem_heap_idle"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8">
+      <nz-row nzAlign="top" style="height: 262px; padding: 12px; background: #fff">
+        <nz-col [nzSpan]="8">
+          <app-observability-sum title="GC" name="gc_count"></app-observability-sum>
+        </nz-col>
+        <nz-col [nzSpan]="8">
+          <app-observability-sum title="CGO" name="cgo_calls"></app-observability-sum>
+        </nz-col>
+        <nz-col [nzSpan]="8">
+          <app-observability-sum title="Lookups" name="mem_lookups"></app-observability-sum>
+        </nz-col>
+        <nz-col [nzSpan]="24">
+          <app-observability-sum title="服务累计运行时长" name="uptime" [fn]="uptime"></app-observability-sum>
+        </nz-col>
+      </nz-row>
+    </nz-col>
+
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="从操作系统获得的堆内存"
+        name="mem_heap_sys"
+        [options]="options.mem_heap_sys"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="分配的堆对象的字节数"
+        name="mem_heap_alloc"
+        [options]="options.mem_heap_alloc"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="已分配的堆对象数量"
+        name="mem_heap_idle"
+        [options]="options.mem_heap_objects"
+      ></app-observability-area>
+    </nz-col>
+
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="已交还给操作系统的堆内存"
+        name="mem_heap_released"
+        [options]="options.mem_heap_released"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="已使用的堆内存"
+        name="mem_heap_inuse"
+        [options]="options.mem_heap_inuse"
+      ></app-observability-area>
+    </nz-col>
+    <nz-col [nzSpan]="8">
+      <app-observability-area
+        title="活动对象的数量"
+        name="mem_live_objects"
+        [options]="options.mem_live_objects"
       ></app-observability-area>
     </nz-col>
   </nz-row>
