--- a/src/common/components/nav/profile/profile.component.html
+++ b/src/common/components/nav/profile/profile.component.html
@@ -1,11 +1,11 @@
 <nz-tabset style="height: 100%" nzTabPosition="left">
   <nz-tab nzTitle="基本信息" i18n-nzTitle>
-    <nz-card *ngIf="app.user() as user">
-      <nz-list nzSize="large" nzItemLayout="vertical">
+    <nz-card *ngIf="app.user() as u">
+      <nz-list nzItemLayout="vertical">
         <nz-list-item>
           <nz-list-item-meta>
             <nz-list-item-meta-title><b i18n>电子邮件</b></nz-list-item-meta-title>
-            <nz-list-item-meta-description i18n> 已设置： {{ user.email }} </nz-list-item-meta-description>
+            <nz-list-item-meta-description i18n> 已设置： {{ u.email }} </nz-list-item-meta-description>
           </nz-list-item-meta>
           <nz-list-item-extra>
             <button nz-button nzType="primary" nzShape="circle" nz-tooltip="编辑" i18n-nz-tooltip (click)="setEmail()">
@@ -17,7 +17,7 @@
           <nz-list-item-meta>
             <nz-list-item-meta-title><b i18n>称呼</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              <ng-container *ngIf="!!user.name; else emptyNameTpl" i18n> 已设置： {{ user.name }} </ng-container>
+              <ng-container *ngIf="!!u.name; else emptyNameTpl" i18n> 已设置： {{ u.name }} </ng-container>
               <ng-template #emptyNameTpl>
                 <span i18n>推荐设置工作称呼或真实姓名</span>
               </ng-template>
@@ -34,8 +34,8 @@
             <nz-list-item-meta-title><b i18n>头像</b></nz-list-item-meta-title>
             <nz-list-item-meta-description i18n> 推荐采用尺寸 256*256 </nz-list-item-meta-description>
           </nz-list-item-meta>
-          <ng-container *ngIf="!!user.avatar; else emptyAvatarTpl">
-            <nz-avatar nzShape="square" [nzSize]="128" [nzSrc]="[user.avatar] | wpxAssets"></nz-avatar>
+          <ng-container *ngIf="!!u.avatar; else emptyAvatarTpl">
+            <nz-avatar nzShape="square" [nzSize]="128" [nzSrc]="[u.avatar] | wpxAssets"></nz-avatar>
           </ng-container>
           <ng-template #emptyAvatarTpl>
             <nz-avatar nzShape="square" [nzSize]="128" nzIcon="user"></nz-avatar>
@@ -51,34 +51,38 @@
             <nz-list-item-meta-title><b i18n>详情</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
               <nz-descriptions [nzColumn]="2">
-                <nz-descriptions-item nzTitle="创建时间" i18n-nzTitle>
-                  {{ user.create_time | date: 'yyyy-MM-dd HH:mm:ss' }}
-                </nz-descriptions-item>
-                <nz-descriptions-item nzTitle="更新时间" i18n-nzTitle>
-                  {{ user.update_time | date: 'yyyy-MM-dd HH:mm:ss' }}
-                </nz-descriptions-item>
-                <nz-descriptions-item nzTitle="累计会话" i18n-nzTitle>
+                <nz-descriptions-item nzTitle="累计会话" [nzSpan]="2">
                   <span i18n>
-                    已累计登录 <b> {{ user.sessions }} </b> 次
+                    已登录 <b> {{ u.sessions }} </b> 次
                   </span>
                 </nz-descriptions-item>
-                <nz-descriptions-item *ngIf="user.history as history" nzTitle="登录于" i18n-nzTitle>
-                  {{ history.timestamp | date: 'yyyy-MM-dd HH:mm:ss' }}
-                </nz-descriptions-item>
-                <!--                <nz-descriptions-item *ngIf="user.history as history" nzTitle="IP" [nzSpan]="2">-->
-                <!--                  <b>[ {{ history.client_ip }} ]</b>-->
-                <!--                </nz-descriptions-item>-->
-                <!--                <nz-descriptions-item nzTitle="地区ISP" i18n-nzTitle [nzSpan]="2">-->
-                <!--                  <nz-space *ngIf="user.history as history" [nzSplit]="spaceSplit">-->
-                <!--                    <ng-template #spaceSplit>-->
-                <!--                      <nz-divider nzType="vertical"></nz-divider>-->
-                <!--                    </ng-template>-->
-                <!--                    <span *nzSpaceItem>{{ !history.country ? '未知' : history.country }}</span>-->
-                <!--                    <span *nzSpaceItem>{{ !history.province ? '未知' : history.province }}</span>-->
-                <!--                    <span *nzSpaceItem>{{ !history.city ? '未知' : history.city }}</span>-->
-                <!--                    <span *nzSpaceItem>{{ !history.isp ? '未知' : history.isp }}</span>-->
-                <!--                  </nz-space>-->
-                <!--                </nz-descriptions-item>-->
+                <ng-container *ngIf="u.history as history">
+                  <nz-descriptions-item nzTitle="最近登录时间" i18n-nzTitle [nzSpan]="2">
+                    {{ history.timestamp | date: 'yyyy/MM/dd HH:mm:ss' }}
+                  </nz-descriptions-item>
+                  <nz-descriptions-item nzTitle="IP" [nzSpan]="2">
+                    {{ history.metadata.client_ip }}
+                  </nz-descriptions-item>
+                  <ng-container [ngSwitch]="u.history.metadata.version">
+                    <ng-container *ngSwitchCase="'shuliancloud.v4'">
+                      <nz-descriptions-item nzTitle="位置" i18n-nzTitle [nzSpan]="2">
+                        <nz-space *ngIf="u.history.detail as detail" [nzSplit]="spaceSplit">
+                          <span *nzSpaceItem>{{ detail.country | wpxBlank: '未知' }}[{{ detail.continent }}]</span>
+                          <span *nzSpaceItem>{{ detail.prov | wpxBlank: '未知' }}</span>
+                          <span *nzSpaceItem
+                            >{{ detail.city | wpxBlank: '未知' }}[{{ detail.lng }},{{ detail.lat }}]</span
+                          >
+                        </nz-space>
+                      </nz-descriptions-item>
+                      <nz-descriptions-item nzTitle="ISP" i18n-nzTitle [nzSpan]="2">
+                        <nz-space *ngIf="u.history.detail as detail" [nzSplit]="spaceSplit">
+                          <span *nzSpaceItem>{{ detail.isp }}</span>
+                          <span *nzSpaceItem>{{ detail.timezone }}</span>
+                        </nz-space>
+                      </nz-descriptions-item>
+                    </ng-container>
+                  </ng-container>
+                </ng-container>
               </nz-descriptions>
             </nz-list-item-meta-description>
           </nz-list-item-meta>
@@ -87,8 +91,8 @@
     </nz-card>
   </nz-tab>
   <nz-tab nzTitle="安全设置" i18n-nzTitle>
-    <nz-card *ngIf="app.user() as user">
-      <nz-list nzSize="large" nzItemLayout="vertical">
+    <nz-card *ngIf="app.user() as u">
+      <nz-list nzItemLayout="vertical">
         <nz-list-item>
           <nz-list-item-meta>
             <nz-list-item-meta-title><b i18n>账户密码</b></nz-list-item-meta-title>
@@ -113,9 +117,7 @@
           <nz-list-item-meta>
             <nz-list-item-meta-title><b i18n>备用邮箱</b></nz-list-item-meta-title>
             <nz-list-item-meta-description>
-              <ng-container *ngIf="!!user.backup_email; else emailEmptyTpl">
-                已设置： {{ user.backup_email }}
-              </ng-container>
+              <ng-container *ngIf="!!u.backup_email; else emailEmptyTpl"> 已设置： {{ u.backup_email }} </ng-container>
               <ng-template #emailEmptyTpl>
                 <span i18n> 未设置备用邮箱，主要用于恢复账号安全相关操作，建议采用个人邮箱 </span>
               </ng-template>
@@ -179,17 +181,17 @@
     </nz-card>
   </nz-tab>
   <nz-tab nzTitle="办公协作" i18n-nzTitle>
-    <nz-card *ngIf="app.user() as user">
-      <nz-list nzSize="large" nzItemLayout="vertical">
+    <nz-card *ngIf="app.user() as u">
+      <nz-list nzItemLayout="vertical">
         <nz-list-item>
           <nz-list-item-meta>
             <nz-list-item-meta-avatar>
               <nz-avatar nzShape="square" nzSize="large" [nzSrc]="['assets', 'Lark.png'] | wpxAssets"></nz-avatar>
             </nz-list-item-meta-avatar>
             <nz-list-item-meta-title><b i18n>飞书</b></nz-list-item-meta-title>
-            <nz-list-item-meta-description *ngIf="!user.lark" i18n> 当前未关联飞书账号 </nz-list-item-meta-description>
+            <nz-list-item-meta-description *ngIf="!u.lark" i18n> 当前未关联飞书账号 </nz-list-item-meta-description>
           </nz-list-item-meta>
-          <nz-descriptions *ngIf="user.lark as lark" nzSize="small" nzBordered [nzColumn]="2">
+          <nz-descriptions *ngIf="u.lark as lark" nzBordered [nzColumn]="1">
             <nz-descriptions-item nzTitle="用户姓名" i18n-nzTitle>{{ lark.name }}</nz-descriptions-item>
             <nz-descriptions-item nzTitle="用户英文名称" i18n-nzTitle>
               {{ lark.en_name | nzSafeNull: '-' }}
@@ -197,7 +199,7 @@
             <nz-descriptions-item nzTitle="用户应用唯一标识" i18n-nzTitle>{{ lark.open_id }}</nz-descriptions-item>
           </nz-descriptions>
           <nz-list-item-extra>
-            <ng-container *ngIf="user.lark; else linkLarkRef">
+            <ng-container *ngIf="u.lark; else linkLarkRef">
               <button
                 nz-button
                 nzType="link"
@@ -220,3 +222,7 @@
     </nz-card>
   </nz-tab>
 </nz-tabset>
+
+<ng-template #spaceSplit>
+  <nz-divider nzType="vertical"></nz-divider>
+</ng-template>
