update: library list & wpxList change to wpxItems & wpxTable/wpxFilebrowser padding style

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -13,9 +13,9 @@
           <span nz-icon nzType="project" nzTheme="outline"></span>
           <span>项目</span>
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="environment">
-          <span nz-icon nzType="deployment-unit" nzTheme="outline"></span>
-          <span>环境</span>
+        <li nz-menu-item nzMatchRouter routerLink="clusters">
+          <span nz-icon nzType="cluster" nzTheme="outline"></span>
+          <span>集群</span>
         </li>
         <li nz-menu-item nzMatchRouter routerLink="workflow">
           <span nz-icon nzType="schedule" nzTheme="outline"></span>
@@ -33,9 +33,10 @@
           <span nz-icon nzType="database" nzTheme="outline"></span>
           <span>日志采集</span>
         </li>
+
         <li nz-menu-item nzMatchRouter routerLink="observability">
           <span nz-icon nzType="line-chart" nzTheme="outline"></span>
-          <span>可观测</span>
+          <span>应用观测</span>
         </li>
         <li nz-menu-divider></li>
         <li nz-menu-item nzMatchRouter routerLink="users">
